mule-user-guide/v/3.5/using-perceptive-flow-design.adoc
= 使用感知流程设计

基于连接测试确定的确定性，Mule采取了一步，通过*Perceptive Flow Design*更轻松地设计您的应用程序。如果您对一个流进行建模以包含一个Anypoint Connector，在Anypoint DataMapper Transformer之前或之后，Mule将使用到资源的工作连接来检索有关消息负载和属性的元数据。捕获资源采用的数据类型和结构，Mule将该数据馈送到DataMapper Transformer中，从而通知DataMapper预期的输入或输出。该功能便于将数据从一种数据格式和结构映射到另一种数据格式。

使用元数据进行设计== 

使用Mule在应用程序中连接SaaS提供程序非常常见。但是，由于每个SaaS提供商都支持不同的数据类型和结构，因此将数据映射到它们或从中映射数据非常具有挑战性。例如，与Salesforce连接不仅涉及简单的即插即用连接，还必须检查Salesforce的数据结构以确定预期的数据输入或输出。如果Salesforce采用与应用程序中的原始消息相同的数据结构，则可以简单地将"username"映射到"username"，但可能存在复杂性，导致无法进行直接映射。例如，您可能需要反汇编"username"输入以将其映射到"company_name"输出。

为了简化映射数据，DataSense的感知功能执行以下活动：

* 测试您希望连接到的SaaS提供商的连接
* 从SaaS提供程序中检索元数据，以获取有关每个应用程序的数据结构和格式的信息
* 为DataMapper使用的数据输入或输出提供sObject类型

换句话说，Mule智能地检查您打算映射的输入或输出数据的结构，然后将正确的输入或输出值输入到DataMapper中。使用Perceptive Flow Design，您不需要手动计算数据结构。 Mule的自动化连接测试和元数据检索为您提供更高级别的确定性，让您的流程无误地运行。

==== 限制

* 感知流程设计仅在Studio的可视化编辑器中可用。
* 要使用Perceptive Flow Design，您必须配置至少一个Anypoint连接器，测试其连接，然后在连接器之前或之后将DataMapper插入流中。
* 感知流程设计仅适用于支持 link:/anypoint-studio/v/5/testing-connections[连接测试]的Anypoint连接器。请参阅 link:/anypoint-studio/v/5/datasense-enabled-connectors[列表]。

== 构建感知流程

. 首先构建一个包含至少一个支持连接测试的连接器的流程。例如，使用 http://www.mulesoft.org/extensions/salesforce-cloud-connector[Salesforce连接器]创建流。 +

+
image:perceptive+flow+1.png[感知+流动+ 1]
+

. 配置Salesforce连接器及其对应的全局连接器，然后测试连接以确认通信。有关详细信息，请参阅 link:/anypoint-studio/v/5/testing-connections[测试连接]。
. 确认已成功连接到Salesforce后，在画布上的连接器前插入*DataMapper*。 +

+
image:perceptive+flow+2.png[感知+流动+ 2]
+

. 打开DataMapper *Properties Editor*。在首页输入描述性详细信息，然后点击*Next*。
. 已经从Salesforce中检索到有关数据结构和格式的详细信息（因为您已通过全局连接器成功连接），Mule会自动规定*Output*。
. 手动定义DataMapper的输入值，然后单击*Create New Mapping*。
.  Studio打开DataMapper控制台，并显示您在左侧手动定义的输入字段以及DataSense从Salesforce正确检索的输出字段。
. 将输入字段拖放到输出字段以将数据格式映射和转换为适用于Salesforce的值。见下面的例子。
+
image:dataMapping_example.png[dataMapping_example]
+
. 保存，然后继续构建您的Mule应用程序。

== 清除DataSense元数据

在某些情况下，您可能需要清除DataSense收集的元数据 - 例如，如果远程应用程序上的属性名称已更改。您可以清除已放置在Studio画布上的任何启用DataSense的连接器的元数据。

有两种方法可以清除元数据：

* 在*Connection Explorer*窗格中，右键单击连接器名称，然后选择*Clear DataSense Metadata*。
+
image:conn.exp.pane.png[conn.exp.pane]

* 在Studio画布中，右键单击连接器，然后选择*Clear DataSense Metadata*。
+
image:studio.canv.png[studio.canv]

[NOTE]
除非DataSense已经为选定的连接器收集了元数据，否则*Clear DataSense Metadata*选项不会显示或显示为灰色。

点击*Clear DataSense Metadata*将导致Studio自动清除元数据。此操作可保留连接器的配置，包括操作，查询等任何参数。重新配置连接器时，DataSense会再次从远程应用程序收集元数据。

== 另请参阅

* 通过 link:/anypoint-studio/v/5/datamapper-user-guide-and-reference[Datamapper用户指南和参考]了解有关Anypoint DataMapper的更多信息。特别是关于元数据的主题，请参阅 link:/anypoint-studio/v/5/defining-datamapper-input-and-output-metadata[定义DataMapper输入和输出元数据]。
*  link:/runtime-manager/deploying-to-cloudhub[部署]您的应用程序到CloudHub。

